# plain-agent

./: .env.example  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md
plain_agent/: agent_loop.py  cli.py  compaction.py  config.py  conversation_history.py  display.py  environment.py  llm_client.py  prompt.py  providers.py  streaming.py  terminal_loop.py  workspace_policy.py
plain_agent/sandbox/: __init__.py  base.py  bubblewrap.py
plain_agent/sandbox/bubblewrap/: workspace.py
plain_agent/tools/: command_runtime.py  edit_file.py  list_files.py  read_file.py  registry.py  run_command.py  search_text.py  tools.py  write_file.py
plain_agent/tools/permissions/: controller.py  file_permission.py  network_permission.py
plain_agent/ui/: app.py  rendering.py  terminal.tcss  terminal_renderer.py  transcript.py
plain_agent/ui/textual_terminal/: app.py  rendering.py
simple_agent/: agent_loop.py  terminal_loop.py
simple_agent/tools/: base_tool.py  command_runtime.py  edit_file.py  list_files.py  read_file.py  run_command.py  search_text.py  write_file.py
tests/: test_agent.py  test_compaction.py  test_config.py  test_conversation_history.py  test_linux_sandbox.py  test_llm_client.py  test_network_permission.py  test_permission_controller.py  test_sandbox.py  test_terminal_loop.py  test_textual_terminal.py  test_tools.py  test_ui.py
